# xdg-user-dirs

./: .editorconfig  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  RELEASE  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  git-tp-sync  meson.build  meson_options.txt  translate.c  user-dirs.defaults  xdg-user-dir  xdg-user-dir-lookup.c  xdg-user-dir.c  xdg-user-dirs-update.c  xdg-user-dirs.service.in
data/: meson.build
man/: Makefile.am  meson.build  user-dirs.defaults.xml  user-dirs.dirs.xml  xdg-user-dir.xml  xdg-user-dirs-update.xml
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  ab.po  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn_IN.po  br.po  ca.po  ckb.po  crh.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  (+47 more)
src/: meson.build  translate.c  xdg-user-dir-lookup.c  xdg-user-dir-lookup.h  xdg-user-dirs-update.c
